[package]
name = "palloc"
authors = ["BRA1L0R"]
repository = "https://github.com/BRA1L0R/palloc"
documentation = "https://docs.rs/palloc"

description = "portable linked-list allocator for baremetal systems"
keywords = ["allocator", "alloc", "no-std", "baremetal", "embedded"]
categories = ["memory-management", "no-std", "embedded"]

readme = "README.md"
license-file = "LICENSE.md"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["spin", "allocator_api"]
allocator_api = []

[dependencies]
spin = { version = "0.9.2", optional = true }